# TD-Ameritrade

./: README.md  convert_csv_td.py  notes.txt
gui/build-main-Qt_6_4_0_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
gui/build-main-Qt_6_4_0_for_macOS-Debug/.qt/: QtDeploySupport.cmake
gui/build-main-Qt_6_4_0_for_macOS-Debug/.qtc_clangd/: compile_commands.json
gui/build-main-Qt_6_4_0_for_macOS-Debug/main.app/Contents/: Info.plist
gui/build-main-Qt_6_4_0_for_macOS-Debug/main.app/Contents/MacOS/: main
gui/build-main-Qt_6_4_0_for_macOS-Debug/main_autogen/: deps
gui/build-main-Qt_6_4_0_for_macOS-Debug/main_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
gui/build-main-Qt_6_4_0_for_macOS-Debug/main_autogen/include/: ui_mainwindow.h
gui/build-startGui-Qt_6_4_1_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
gui/build-startGui-Qt_6_4_1_for_macOS-Debug/.qt/: QtDeploySupport.cmake
gui/build-startGui-Qt_6_4_1_for_macOS-Debug/.qtc_clangd/: compile_commands.json
gui/build-startGui-Qt_6_4_1_for_macOS-Debug/startGui.app/Contents/: Info.plist
gui/build-startGui-Qt_6_4_1_for_macOS-Debug/startGui_autogen/: deps
gui/build-startGui-Qt_6_4_1_for_macOS-Debug/startGui_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
gui/main/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
gui/startGui/: CMakeLists.txt
io/input/: transactions_2021.csv
io/output/: output.csv  testing.csv
tools/: analyze_csv.py  convert_csv_td.py
tools/_jupyter-testing/: Untitled-checkpoint.ipynb
tools/analyze/: analyze_all_csv.py  analyze_single_csv.py
tools/filter_csv_file/: .convert_csv_td.py.swp  README.rd  convert_csv_td.py  test.py
tools/filter_csv_file/input-files/: converted_transactions.csv.xlsx  transactions.csv
tools/filter_csv_file/output/: testing.csv
tools/jupyter/: Untitled.ipynb
utility/: initial.txt
(+211 files in other folders)
